Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <article data-testid="test-profile-card" class="profile-card">
       <figure class="avatar">
         <img
-          src="/me.jpg"
+          src="me.jpg"
           alt="User avatar"
           data-testid="test-user-avatar"
         />
